--- a/amazon.html
+++ b/amazon.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Amazon Project</title>
+  <title>Amazon Project-Copy</title>
 
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -54,9 +54,8 @@
     </div>
   </div>
    
-  <script src="data/cart.js"></script>
   <script src="data/products.js"></script> 
-  <script src="scripts/amazon.js"></script>
+  <script type="module" src="scripts/amazon.js"></script>
 </body>
 
 </html>
