--- a/amazon.html
+++ b/amazon.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Amazon Project-Copy</title>
+  <title>Amazon Project</title>
 
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
